css/style.css
*{
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}

header{
    display: flex;
    justify-content:space-around;
    align-items:center;
    min-height: 8vh;
    background-color:#59594A;
    font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif; 
    font-size: 18px; font-style: normal;
}
.logo{
    
    color:rgb(15, 15, 15);
    text-transform: uppercase;
    letter-spacing: 2px;
    font-size: 20px;
}
.nav-links {
    display: flex;
    background-color: #59594A;
    justify-content: space-around;
    width: 30%;  
}
.nav-links {
   list-style: none;
}

.nav-links a {
    color:rgb(33, 36, 35);
    text-decoration: none;
    letter-spacing: 2px;
    font-weight: bold ;
    font-size: 15px;

}
.burger {
    display: none;
    cursor: pointer;
}
.burger div{
    width: 25px;
    height: 4px;  
    background-color:rgb(19, 17, 17);
    margin: 5px;
    transition: all 0.3s ease;

}
@media screen and (max-width:1024px){
    .nav-links {
        display: flex;
        background-color: #59594A;
        justify-content: space-around;
        width: 50%;  
    
    }
}

@media screen and (max-width:768px){
    body{
        overflow: hidden;
    }
   .nav-links{
       position: absolute;
       right: 0;
       height:92vh;
       top:8vh;
       background-color: #59594A;
       display:flex;
       flex-direction:column;
       align-items: center;
       width: 50%;
       transform: translateX(100%) ;
       transition: transform 0.5s ease-in;
   
    }
    .nav-links li{
        opacity: 0;
    }
    .burger{
        display: block;
    }
    .header-active{
        transform: translate(0%);
    }
    @keyframes navLinkFade {
        from { 
            opacity:0;
            transform:translateX(50px);
        }
        to{
            opacity: 1;
            transform: translateX(0px);
        }
    }
}
.toggle .line1{
    transform: rotate(-45deg) translate(-5px,6px);

}
.toggle .line2{
    opacity: 0;

}
.toggle .line3{
    transform: rotate(45deg) translate(-5px,-6px);

}
ul li a:hover{
    background-color:rgb(221, 208, 30);
    color:#000;
}
ul li.active a{
    background-color:#fff;
    color:#000;
    text-decoration: none;
}

